# notion_title

./: .pre-commit-config.yaml  Dockerfile  README.md  env.sample  log.py  main.py  pyproject.toml  test_title.py  test_updater.py  title.py  updater.py
.github/workflows/: python-package.yml
mock/: pages.py
