[tool.poetry]
name = "notion"
version = "0.1.0"
description = ""
authors = ["Junoh Moon <mjo970625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
notion-client = "^2.0.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pytest-mock = "^3.12.0"
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
